--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
                 <category android:name="android.intent.category.HOME" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
+<!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
