--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
 
 
     <application
@@ -41,9 +43,14 @@
 
 <!--                <category android:name="android.intent.category.LAUNCHER" />-->
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-<!--                <action android:name="android.intent.action.BOOT_COMPLETED" />-->
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </activity>
+
+        <service android:name=".BootService"
+            android:enabled="true"
+            android:exported="true"
+            android:foregroundServiceType="specialUse" />
     </application>
 
 </manifest>
